--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,22 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root{
+  --body-font: 'Roboto', sans-serif;
+  --second-font: 'Montserrat', sans-serif;
+}
+
+:root{
+  --main-color: #000;
+  --second-color: #f5efed;
+  --third-color: #db5461;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--body-font);
 }
 
 a {
@@ -13,4 +26,21 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.header{
+  height: 6rem;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  color: #fff;
+  position: fixed;
+  z-index: 100;
+  transition: .5s ease;
+}
+
+.active{
+  background-color: #000;
+  transition: .2s ease;
 }
